# fundingbot-sdk

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/fundingbot_sdk/contracts/: errors.py  protocols.py
src/fundingbot_sdk/contracts/ports/: cex_client.py  rate_limiter.py
src/fundingbot_sdk/schemas/: balance.py  base.py  closed_position_report.py  funding.py  market.py  order.py  position_info.py  ticker.py
src/fundingbot_sdk/toolkit/: client_base.py  error_mapper.py
